# sisi_mcp

./: .env.template  .gitignore  DIFY_INTEGRATION_GUIDE.md  HTTP_SERVER_README.md  README.en.md  README.md  USAGE_GUIDE.md  dify_api_server.py  dify_test_server.py  dify_wrapper.py  mcp_server.py  mcp_server_http.py  mcp_server_stdio.py  pyproject.toml  requirements.txt  setup_dify_integration.sh  test_dify_integration.sh  test_http_client.py
mcp_conductor/ai_platforms/deepseek/: rest_api.py
mcp_conductor/ai_platforms/sisi/: rest_api.py
mcp_conductor/detector/: base_detector.py  changepoint.py  pipe_detect_engine.py  plot_ship_congestion.py
mcp_conductor/detector/generic/: changepoints.py
mcp_conductor/entry/: main_traffic_detect.py
mcp_conductor/resources/: tools.py
mcp_conductor/resources/deepseek/: __init__.py  rest_api.py
mcp_conductor/resources/sisi/APIs/: LLM.py  base_rest_api.py  canal_traffic.py
mcp_conductor/templates/: questions.py
tests/mcp_conductor/: test_mcp_server.py
tests/mcp_conductor/ai_platforms/deepseek/: test_deepseek_client.py
tests/mcp_conductor/ai_platforms/sisi/: test_sisi_client.py
tests/mcp_conductor/detector/: test_changepoint.py
tests/mcp_conductor/detector/generic/: test_changepoint.py
tests/mcp_conductor/resources/deepseek/: test_deepseek_client.py
tests/mcp_conductor/resources/sisi/APIs/: test_canal_traffic.py  test_sisi_client.py
